Prevent jump when load page

--- a/src/styl/base.styl
+++ b/src/styl/base.styl
@@ -18,9 +18,10 @@ body
   -moz-osx-font-smoothing auto
   -webkit-font-smoothing antialiased
   -webkit-overflow-scrolling touch
-  color $gray-dark
+  color $gray-dark 
   font-family -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu,Cantarell, 'Helvetica Neue', sans-serif  
   overflow-x hidden
+  visibility visible
  
 img 
   max-width 100%
